--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,21 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores sint, blanditiis dolor molestias autem maiores suscipit?
         Est magnam repellendus velit, accusantium qui ex saepe nemo recusandae quidem aliquam rerum quo totam. Odit, a aut
         aspernatur temporibus nulla dolor neque non modi mollitia veritatis impedit, adipisci, officiis porro et aliquam
-        tenetur?</p>
+        tenetur?
+    </p>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+
+        socket.on('connect', () => {
+            console.log('connected to server');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected from server');
+        });
+    </script>
 </body>
 
 </html>
